--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
     "version": 2,
     "builds": [
         {
-            "src": "./app.py",
-            "use": "@vercel/python"
+            "src": "./index.py",
+            "use": "@vercel/python",
+            "config": {"runtime":"python3.6"}
         }
     ],
     "routes": [
